--- a/.browserslistrc
+++ b/.browserslistrc
@@ -1,5 +1,11 @@
 # Browsers that we support
 
-last 4 versions
-ie >= 7
-chrome >= 58
+>= 0.5%
+last 2 major versions
+not dead
+Chrome >= 60
+Firefox >= 60
+Firefox ESR
+iOS >= 12
+Safari >= 12
+not Explorer <= 11
